<resources>
    <string name="app_name">DTMF</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="pound">#</string>
    <string name="error_init">Audio recorder not initialised! Maybe a working input sample rate could not be found.</string>
    <string name="error_buffer">Error from audio recording! Cannot find a working input sample rate.</string>
</resources>
