<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="999"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.must.ponnex.dsp.YScale
            android:id="@+id/yscale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.must.ponnex.dsp.Scope
            android:id="@+id/scope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.must.ponnex.dsp.XScale
        android:id="@+id/xscale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/keypad"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout1">

            <Button
                android:id="@+id/one"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/one"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/two"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/two"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/three"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/three"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">

            <Button android:id="@+id/four"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/four"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/five"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/five"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/six"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/six"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3">

            <Button
                android:id="@+id/seven"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/seven"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/eight"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/eight"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/nine"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/nine"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4">

            <Button
                android:id="@+id/star"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/star"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/zero"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/zero"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

            <Button
                android:id="@+id/pound"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/pound"
                android:textSize="18sp"
                style="?android:buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>